// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About Organization test create Organization  1`] = `
<div>
   
  <div
    class="OverlaySpinner---overlaySpinner--3Bs3"
  >
    <form
      class="FormikForm---main--1N87"
    >
      <div>
        <div
          class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
        >
          <div
            class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-xxlarge--3lSp"
            style="width: 50%;"
          >
            <div
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
              style="min-height: 450px;"
            >
              <h2
                class="StyledProps---font--2ipy StyledProps---font-h2--3Vpc StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey800--2G2G StyledProps---margin-bottom-xxlarge--1wAO"
                level="2"
              >
                ABOUT THE ORGANIZATION
              </h2>
              <div
                class="InputWithIdentifier---txtNameContainer--20iZ"
              >
                <div
                  class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                >
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="InputWithIdentifier---idInput--w8_T"
                    contenteditable="true"
                  />
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                    icon="edit"
                    style="vertical-align: middle;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    Name*
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="color-1"
              >
                <label
                  class="bp3-label"
                  for="color"
                >
                  Color
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws ColorPicker---picker--3GiQ"
                        style="width: 60px; height: 38px;"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span
                            class="ColorPicker---color--19sc ColorPicker---transparent--2Wn1"
                            style="width: calc(60px - 45px); background: transparent;"
                          />
                        </span>
                        <span
                          class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws"
                          icon="caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              caret-down
                            </desc>
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="collapseDiv"
              >
                <div
                  class="Collapse---main--34Is"
                >
                  <div
                    class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---main--2ZKU Collapse---header--3aq4"
                  >
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---leftSection--YiEo"
                    >
                      <span
                        class="bp3-icon bp3-icon-small-plus StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
                        icon="small-plus"
                      >
                        <svg
                          data-icon="small-plus"
                          height="10"
                          viewBox="0 0 16 16"
                          width="10"
                        >
                          <desc>
                            small-plus
                          </desc>
                          <path
                            d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <p
                        class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---title--2DAT"
                      >
                        Description
                      </p>
                    </div>
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws"
                    />
                  </div>
                  <div
                    class="Collapse---collapse--2EmT"
                  >
                    <div
                      class="bp3-collapse collapse"
                    >
                      <div
                        aria-hidden="false"
                        class="bp3-collapse-body"
                        style="transform: translateY(-undefinedpx);"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="collapseDiv"
              >
                <div
                  class="Collapse---main--34Is"
                >
                  <div
                    class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---main--2ZKU Collapse---header--3aq4"
                  >
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---leftSection--YiEo"
                    >
                      <span
                        class="bp3-icon bp3-icon-small-plus StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
                        icon="small-plus"
                      >
                        <svg
                          data-icon="small-plus"
                          height="10"
                          viewBox="0 0 16 16"
                          width="10"
                        >
                          <desc>
                            small-plus
                          </desc>
                          <path
                            d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <p
                        class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---title--2DAT"
                      >
                        Tags
                      </p>
                    </div>
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws"
                    />
                  </div>
                  <div
                    class="Collapse---collapse--2EmT"
                  >
                    <div
                      class="bp3-collapse collapse"
                    >
                      <div
                        aria-hidden="false"
                        class="bp3-collapse-body"
                        style="transform: translateY(-undefinedpx);"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---margin-top-large--1oBg"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Close Preview
                </span>
              </button>
            </div>
            <div
              class="Layout---horizontal--3rmQ Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
            >
              <button
                class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws button"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Back
                </span>
              </button>
              <button
                class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws button"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save and Close
                </span>
              </button>
            </div>
          </div>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws preview StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
            style="width: 50%;"
          >
            <div
              class="bp3-card bp3-elevation-2 Card---card--2BXa"
            >
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws overflow"
                style="width: 250px;"
              >
                <div
                  class="colorBar"
                />
                <div
                  class="Layout---vertical--3Szv Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws StyledProps---padding-right-large--2vF9"
                >
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                  >
                    Organization Name
                  </p>
                  <p
                    class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey350--3j5q"
                    style="--text-line-clamp: 5;"
                  >
                    Description
                  </p>
                  <div
                    class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---padding-top-xxxlarge--3gf7"
                  >
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws wrap"
                      style="width: 80%;"
                    />
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws user"
                      style="width: 20%;"
                    >
                      <span
                        class="bp3-icon bp3-icon-user StyledProps---main--1Wws"
                        icon="user"
                      >
                        <svg
                          data-icon="user"
                          height="24"
                          viewBox="0 0 20 20"
                          width="24"
                        >
                          <desc>
                            user
                          </desc>
                          <path
                            d="M10 0C4.48 0 0 4.48 0 10c0 .33.02.65.05.97.01.12.03.23.05.35.03.2.05.4.09.59.03.14.06.28.1.42l.12.48c.05.16.1.31.15.46.05.13.09.27.15.4.06.16.13.32.21.48.05.11.1.22.16.33.09.17.17.34.27.5.05.09.1.17.15.25.11.18.22.35.34.52.04.06.08.11.12.17 1.19 1.62 2.85 2.86 4.78 3.53l.09.03c.46.15.93.27 1.42.36.08.01.17.03.25.04.49.07.99.12 1.5.12s1.01-.05 1.5-.12c.08-.01.17-.02.25-.04.49-.09.96-.21 1.42-.36l.09-.03c1.93-.67 3.59-1.91 4.78-3.53.04-.05.08-.1.12-.16.12-.17.23-.35.34-.53.05-.08.1-.16.15-.25.1-.17.19-.34.27-.51.05-.11.1-.21.15-.32.07-.16.14-.32.21-.49.05-.13.1-.26.14-.39.05-.15.11-.31.15-.46.05-.16.08-.32.12-.48.03-.14.07-.28.1-.42.04-.19.06-.39.09-.59.02-.12.04-.23.05-.35.05-.32.07-.64.07-.97 0-5.52-4.48-10-10-10zm0 18a7.94 7.94 0 01-6.15-2.89c.84-.44 1.86-.82 2.67-1.19 1.45-.65 1.3-1.05 1.35-1.59.01-.07.01-.14.01-.21-.51-.45-.93-1.08-1.2-1.8l-.01-.01c0-.01-.01-.02-.01-.03a4.42 4.42 0 01-.15-.48c-.33-.07-.53-.44-.61-.79-.08-.14-.23-.48-.2-.87.05-.51.26-.74.49-.83v-.08c0-.63.06-1.55.17-2.15.02-.17.06-.33.11-.5.21-.73.66-1.4 1.26-1.86.62-.47 1.5-.72 2.28-.72.78 0 1.65.25 2.27.73.6.46 1.05 1.12 1.26 1.86.05.16.08.33.11.5.11.6.17 1.51.17 2.15v.09c.22.1.42.33.46.82.04.39-.12.73-.2.87-.07.34-.27.71-.6.78-.04.16-.09.33-.15.48 0 .01-.02.05-.02.05-.26.71-.67 1.33-1.17 1.78 0 .08.01.16.01.23.05.54-.15.94 1.31 1.59.81.36 1.84.74 2.68 1.19A7.958 7.958 0 0110 18z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
   
</div>
`;

exports[`About Organization test edit Organization  1`] = `
<div>
   
  <div
    class="OverlaySpinner---overlaySpinner--3Bs3"
  >
    <form
      class="FormikForm---main--1N87"
    >
      <div>
        <div
          class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
        >
          <div
            class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-xxlarge--3lSp"
            style="width: 50%;"
          >
            <div
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
              style="min-height: 450px;"
            >
              <h2
                class="StyledProps---font--2ipy StyledProps---font-h2--3Vpc StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey800--2G2G StyledProps---margin-bottom-xxlarge--1wAO"
                level="2"
              >
                ABOUT THE ORGANIZATION
              </h2>
              <div
                class="InputWithIdentifier---txtNameContainer--20iZ"
              >
                <div
                  class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                >
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="InputWithIdentifier---idInput--w8_T"
                    contenteditable="false"
                    disabled=""
                  >
                    testOrg
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    Name*
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="test"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="color-1"
              >
                <label
                  class="bp3-label"
                  for="color"
                >
                  Color
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws ColorPicker---picker--3GiQ"
                        style="width: 60px; height: 38px;"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span
                            class="ColorPicker---color--19sc"
                            style="width: calc(60px - 45px); background: rgb(230, 184, 0);"
                          />
                        </span>
                        <span
                          class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws"
                          icon="caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              caret-down
                            </desc>
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="collapseDiv"
              >
                <div
                  class="Collapse---main--34Is"
                >
                  <div
                    class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---main--2ZKU Collapse---header--3aq4"
                  >
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---leftSection--YiEo"
                    >
                      <span
                        class="bp3-icon bp3-icon-small-minus StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
                        icon="small-minus"
                      >
                        <svg
                          data-icon="small-minus"
                          height="10"
                          viewBox="0 0 16 16"
                          width="10"
                        >
                          <desc>
                            small-minus
                          </desc>
                          <path
                            d="M11 7H5c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <p
                        class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---title--2DAT"
                      >
                        Description
                      </p>
                    </div>
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws"
                    />
                  </div>
                  <div
                    class="Collapse---collapse--2EmT"
                  >
                    <div
                      class="bp3-collapse collapse"
                      style="height: auto; overflow-y: visible; transition: none;"
                    >
                      <div
                        aria-hidden="false"
                        class="bp3-collapse-body"
                        style="transform: translateY(0); transition: none;"
                      >
                        <div
                          class="bp3-form-group desc"
                          data-id="description-2"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <textarea
                              autocomplete="off"
                              class="bp3-input bp3-fill"
                              name="description"
                            >
                              test
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="collapseDiv"
              >
                <div
                  class="Collapse---main--34Is"
                >
                  <div
                    class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---main--2ZKU Collapse---header--3aq4"
                  >
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---leftSection--YiEo"
                    >
                      <span
                        class="bp3-icon bp3-icon-small-minus StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
                        icon="small-minus"
                      >
                        <svg
                          data-icon="small-minus"
                          height="10"
                          viewBox="0 0 16 16"
                          width="10"
                        >
                          <desc>
                            small-minus
                          </desc>
                          <path
                            d="M11 7H5c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <p
                        class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---title--2DAT"
                      >
                        Tags
                      </p>
                    </div>
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws"
                    />
                  </div>
                  <div
                    class="Collapse---collapse--2EmT"
                  >
                    <div
                      class="bp3-collapse collapse"
                      style="height: auto; overflow-y: visible; transition: none;"
                    >
                      <div
                        aria-hidden="false"
                        class="bp3-collapse-body"
                        style="transform: translateY(0); transition: none;"
                      >
                        <div
                          class="bp3-form-group desc"
                          data-id="undefined-3"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-popover-wrapper TagInput---tagInput--1eAz bp3-fill"
                            >
                              <div
                                class="bp3-popover-target"
                              >
                                <div
                                  class=""
                                >
                                  <div
                                    class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
                                  >
                                    <div
                                      class="bp3-tag-input-values"
                                    >
                                      <span
                                        class="bp3-tag bp3-minimal TagInput---tag--2ZBU"
                                        data-tag-index="0"
                                      >
                                        <span
                                          class="bp3-text-overflow-ellipsis bp3-fill"
                                        >
                                          tag1
                                        </span>
                                        <button
                                          class="bp3-tag-remove"
                                          type="button"
                                        >
                                          <span
                                            class="bp3-icon bp3-icon-small-cross"
                                            icon="small-cross"
                                          >
                                            <svg
                                              data-icon="small-cross"
                                              height="16"
                                              viewBox="0 0 16 16"
                                              width="16"
                                            >
                                              <desc>
                                                small-cross
                                              </desc>
                                              <path
                                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                                fill-rule="evenodd"
                                              />
                                            </svg>
                                          </span>
                                        </button>
                                      </span>
                                      <span
                                        class="bp3-tag bp3-minimal TagInput---tag--2ZBU"
                                        data-tag-index="1"
                                      >
                                        <span
                                          class="bp3-text-overflow-ellipsis bp3-fill"
                                        >
                                          tag2
                                        </span>
                                        <button
                                          class="bp3-tag-remove"
                                          type="button"
                                        >
                                          <span
                                            class="bp3-icon bp3-icon-small-cross"
                                            icon="small-cross"
                                          >
                                            <svg
                                              data-icon="small-cross"
                                              height="16"
                                              viewBox="0 0 16 16"
                                              width="16"
                                            >
                                              <desc>
                                                small-cross
                                              </desc>
                                              <path
                                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                                fill-rule="evenodd"
                                              />
                                            </svg>
                                          </span>
                                        </button>
                                      </span>
                                      <input
                                        class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                        value=""
                                      />
                                    </div>
                                    <button
                                      class="bp3-button bp3-minimal"
                                      type="button"
                                    >
                                      <span
                                        class="bp3-icon bp3-icon-cross"
                                        icon="cross"
                                      >
                                        <svg
                                          data-icon="cross"
                                          height="16"
                                          viewBox="0 0 16 16"
                                          width="16"
                                        >
                                          <desc>
                                            cross
                                          </desc>
                                          <path
                                            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                            fill-rule="evenodd"
                                          />
                                        </svg>
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---margin-top-large--1oBg"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Close Preview
                </span>
              </button>
            </div>
            <div
              class="Layout---horizontal--3rmQ Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
            >
              <button
                class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws button"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save and Close
                </span>
              </button>
            </div>
          </div>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws preview StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
            style="width: 50%;"
          >
            <div
              class="bp3-card bp3-elevation-2 Card---card--2BXa"
            >
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws overflow"
                style="width: 250px;"
              >
                <div
                  class="colorBar"
                  style="background-color: rgb(230, 184, 0);"
                />
                <div
                  class="Layout---vertical--3Szv Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws StyledProps---padding-right-large--2vF9"
                >
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                  >
                    test
                  </p>
                  <p
                    class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey350--3j5q"
                    style="--text-line-clamp: 5;"
                  >
                    test
                  </p>
                  <div
                    class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---padding-top-xxxlarge--3gf7"
                  >
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws wrap"
                      style="width: 80%;"
                    >
                      <span
                        class="Tag---main--1vng"
                      >
                        <span
                          class="bp3-tag bp3-minimal cardTags"
                        >
                          <span
                            class="bp3-text-overflow-ellipsis bp3-fill"
                          >
                            tag1
                          </span>
                        </span>
                      </span>
                      <span
                        class="Tag---main--1vng"
                      >
                        <span
                          class="bp3-tag bp3-minimal cardTags"
                        >
                          <span
                            class="bp3-text-overflow-ellipsis bp3-fill"
                          >
                            tag2
                          </span>
                        </span>
                      </span>
                    </div>
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws user"
                      style="width: 20%;"
                    >
                      <span
                        class="bp3-icon bp3-icon-user StyledProps---main--1Wws"
                        icon="user"
                      >
                        <svg
                          data-icon="user"
                          height="24"
                          viewBox="0 0 20 20"
                          width="24"
                        >
                          <desc>
                            user
                          </desc>
                          <path
                            d="M10 0C4.48 0 0 4.48 0 10c0 .33.02.65.05.97.01.12.03.23.05.35.03.2.05.4.09.59.03.14.06.28.1.42l.12.48c.05.16.1.31.15.46.05.13.09.27.15.4.06.16.13.32.21.48.05.11.1.22.16.33.09.17.17.34.27.5.05.09.1.17.15.25.11.18.22.35.34.52.04.06.08.11.12.17 1.19 1.62 2.85 2.86 4.78 3.53l.09.03c.46.15.93.27 1.42.36.08.01.17.03.25.04.49.07.99.12 1.5.12s1.01-.05 1.5-.12c.08-.01.17-.02.25-.04.49-.09.96-.21 1.42-.36l.09-.03c1.93-.67 3.59-1.91 4.78-3.53.04-.05.08-.1.12-.16.12-.17.23-.35.34-.53.05-.08.1-.16.15-.25.1-.17.19-.34.27-.51.05-.11.1-.21.15-.32.07-.16.14-.32.21-.49.05-.13.1-.26.14-.39.05-.15.11-.31.15-.46.05-.16.08-.32.12-.48.03-.14.07-.28.1-.42.04-.19.06-.39.09-.59.02-.12.04-.23.05-.35.05-.32.07-.64.07-.97 0-5.52-4.48-10-10-10zm0 18a7.94 7.94 0 01-6.15-2.89c.84-.44 1.86-.82 2.67-1.19 1.45-.65 1.3-1.05 1.35-1.59.01-.07.01-.14.01-.21-.51-.45-.93-1.08-1.2-1.8l-.01-.01c0-.01-.01-.02-.01-.03a4.42 4.42 0 01-.15-.48c-.33-.07-.53-.44-.61-.79-.08-.14-.23-.48-.2-.87.05-.51.26-.74.49-.83v-.08c0-.63.06-1.55.17-2.15.02-.17.06-.33.11-.5.21-.73.66-1.4 1.26-1.86.62-.47 1.5-.72 2.28-.72.78 0 1.65.25 2.27.73.6.46 1.05 1.12 1.26 1.86.05.16.08.33.11.5.11.6.17 1.51.17 2.15v.09c.22.1.42.33.46.82.04.39-.12.73-.2.87-.07.34-.27.71-.6.78-.04.16-.09.33-.15.48 0 .01-.02.05-.02.05-.26.71-.67 1.33-1.17 1.78 0 .08.01.16.01.23.05.54-.15.94 1.31 1.59.81.36 1.84.74 2.68 1.19A7.958 7.958 0 0110 18z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
   
</div>
`;
